Виконав  домашню роботу № 4

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <header class="header">
         <div class="container box-header">
             <nav class="header-nav">
-                <a class="header-logo" href="https://vasyl96.github.io/goit-markup-hw-03/"><span
+                <a class="header-logo" href="https://vasyl96.github.io/goit-markup-hw-04/"><span
                         class="logo-text">Web</span>Studio</a>
                 <ul class="header-list">
                     <li class="header-item">
-                        <a class="header-link current" href="https://vasyl96.github.io/goit-markup-hw-03/">Студия</a>
+                        <a class="header-link current" href="https://vasyl96.github.io/goit-markup-hw-04/">Студия</a>
                     </li>
                     <li class="header-item">
                         <a class="header-link" href="./portfolio.html">Портфолио</a>
@@ -34,10 +34,15 @@
                 </ul>
             </nav>
             <ul class="contact-list">
-                <li class="contact-item"><a class="contact-email"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="contact-item"><a class="contact-email" href="mailto:info@devstudio.com"><svg
+                            class="icon-email" width="12" height="16">
+                            <use href="./img/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
-                <li class="contact-item"><a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="contact-item"><a class="contact-phone" href="tel:+380961111111"><svg class="icon-phone"
+                            width="10" height="16">
+                            <use href="./img/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -56,24 +61,44 @@
             <div class="container">
                 <ul class="preferences-list">
                     <li class="preference-item">
+                        <div class="preference-box">
+                            <svg class="preference-icon" width="70" hedth="70">
+                                <use href="img/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="preference-title">Внимание к деталям</h3>
                         <p class="preference-text">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
                     <li class="preference-item">
+                        <div class="preference-box">
+                            <svg class="preference-icon" width="70" hedth="70">
+                                <use href="img/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="preference-title">Пунктуальность</h3>
                         <p class="preference-text">
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
                     <li class="preference-item">
+                        <div class="preference-box">
+                            <svg class="preference-icon" width="70" hedth="70">
+                                <use href="img/sprite.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="preference-title">Планирование</h3>
                         <p class="preference-text">
                             Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
                     <li class="preference-item">
+                        <div class="preference-box">
+                            <svg class="preference-icon" width="70" hedth="70">
+                                <use href="img/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="preference-title">Современные технологии</h3>
                         <p class="preference-text">
                             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -107,6 +132,24 @@
                         <div class="box-team-iteam">
                             <h3 class="team-subtitle">Игорь Демьяненко</h3>
                             <p lang="en" class="team-text">Product Designer</p>
+                            <ul class="icon-list">
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-instagram"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-facebook"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-linkedin"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -114,6 +157,24 @@
                         <div class="box-team-iteam">
                             <h3 class="team-subtitle">Ольга Репина</h3>
                             <p lang="en" class="team-text">Frontend Developer</p>
+                            <ul class="icon-list">
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-instagram"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-facebook"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-linkedin"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -122,6 +183,24 @@
                         <div class="box-team-iteam">
                             <h3 class="team-subtitle">Николай Тарасов</h3>
                             <p lang="en" class="team-text">Marketing</p>
+                            <ul class="icon-list">
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-instagram"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-facebook"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-linkedin"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -130,28 +209,101 @@
                         <div class="box-team-iteam">
                             <h3 class="team-subtitle">Михаил Ермаков</h3>
                             <p lang="en" class="team-text">UI Designer</p>
+                            <ul class="icon-list">
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-instagram"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-facebook"></use>
+                                        </svg></a></li>
+                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                            <use href="./img/sprite.svg#icon-linkedin"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <!-- Loyal customer -->
+        <section class="customer-section container">
+            <h2 class="customer-title">Постоянные клиенты</h2>
+            <ul class="customer-list">
+                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="41"
+                            height="47">
+                            <use href="./img/sprite.svg#icon-client-1"></use>
+                        </svg></a></li>
+                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="40"
+                            height="52">
+                            <use href="./img/sprite.svg#icon-client-2"></use>
+                        </svg></a></li>
+                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="43"
+                            height="41">
+                            <use href="./img/sprite.svg#icon-client-3"></use>
+                        </svg></a></li>
+                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="84"
+                            height="41">
+                            <use href="./img/sprite.svg#icon-client-4"></use>
+                        </svg></a></li>
+                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="63"
+                            height="45">
+                            <use href="./img/sprite.svg#icon-client-5"></use>
+                        </svg></a></li>
+                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="94"
+                            height="44">
+                            <use href="./img/sprite.svg#icon-client-6"></use>
+                        </svg></a></li>
+            </ul>
+        </section>
     </main>
     <!-- Footer section-->
     <footer class="footer">
         <div class="container box-footer">
-            <a class="footer-logo" href="https://vasyl96.github.io/goit-markup-hw-03/"><span
-                    class="logo-text">Web</span>Studio</a>
-            <address class="footer-address">
-                <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="footer-list">
-                    <li class="footer-item"><a class="footer-email"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="footer-item"><a class="footer-phone" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
+            <div class="footer-contact">
+                <a class="footer-logo" href="https://vasyl96.github.io/goit-markup-hw-04/"><span
+                        class="logo-text">Web</span>Studio</a>
+                <address class="footer-address">
+                    <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="footer-list">
+                        <li class="footer-item"><a class="footer-email"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-item"><a class="footer-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social">
+                <p class="social-text">присоединяйтесь</p>
+                <ul class="social icon-list">
+                    <li class="social icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-instagram"></use>
+                            </svg></a></li>
+                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-twitter"></use>
+                            </svg></a></li>
+                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-facebook"></use>
+                            </svg></a></li>
+                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-linkedin"></use>
+                            </svg></a></li>
                 </ul>
-            </address>
+            </div>
         </div>
+
     </footer>
 </body>
 
