--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,11 @@
     <header class="header">
         <div class="container box-header">
             <nav class="header-nav">
-                <a class="header-logo" href="https://vasyl96.github.io/goit-markup-hw-03/"><span
+                <a class="header-logo" href="https://vasyl96.github.io/goit-markup-hw-04/"><span
                         class="logo-text">Web</span>Studio</a>
                 <ul class="header-list">
                     <li class="header-item">
-                        <a class="header-link" href="https://vasyl96.github.io/goit-markup-hw-03/">Студия</a>
+                        <a class="header-link" href="https://vasyl96.github.io/goit-markup-hw-04/">Студия</a>
                     </li>
                     <li class="header-item">
                         <a class="header-link current" href="./portfolio.html">Портфолио</a>
@@ -34,10 +34,15 @@
                 </ul>
             </nav>
             <ul class="contact-list">
-                <li class="contact-item"><a class="contact-email"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="contact-item"><a class="contact-email" href="mailto:info@devstudio.com"><svg
+                            class="icon-email" width="12" height="16">
+                            <use href="./img/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
-                <li class="contact-item"><a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="contact-item"><a class="contact-phone" href="tel:+380961111111"><svg class="icon-phone"
+                            width="10" height="16">
+                            <use href="./img/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -161,19 +166,43 @@
     <!-- Footer section-->
     <footer class="footer">
         <div class="container box-footer">
-            <a class="footer-logo" href="https://vasyl96.github.io/goit-markup-hw-03/"><span
-                    class="logo-text">Web</span>Studio</a>
-            <address class="footer-address">
-                <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="footer-list">
-                    <li class="footer-item"><a class="footer-email"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="footer-item"><a class="footer-phone" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
+            <div class="footer-contact">
+                <a class="footer-logo" href="https://vasyl96.github.io/goit-markup-hw-04/"><span
+                        class="logo-text">Web</span>Studio</a>
+                <address class="footer-address">
+                    <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="footer-list">
+                        <li class="footer-item"><a class="footer-email"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-item"><a class="footer-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social">
+                <p class="social-text">присоединяйтесь</p>
+                <ul class="social icon-list">
+                    <li class="social icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-instagram"></use>
+                            </svg></a></li>
+                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-twitter"></use>
+                            </svg></a></li>
+                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-facebook"></use>
+                            </svg></a></li>
+                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
+                            href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                <use href="./img/sprite.svg#icon-linkedin"></use>
+                            </svg></a></li>
                 </ul>
-            </address>
+            </div>
         </div>
+
     </footer>
 </body>
 
